# ChangeLog for sys-kernel/lh-sources
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*lh-sources-3.5.0 (24 Jul 2012)

  24 Jul 2012; Justin Lecher <jlec@gentoo.org> -lh-sources-3.4.0.ebuild,
  -lh-sources-3.4.2.ebuild, -lh-sources-3.4.2-r1.ebuild,
  -lh-sources-3.4.3.ebuild, -lh-sources-3.4.4.ebuild, +lh-sources-3.5.0.ebuild:
  Version Bump

  18 Jul 2012; Justin Lecher <jlec@gentoo.org> lh-sources-3.4.5.ebuild:
  Fix pathcset version

*lh-sources-3.4.5 (18 Jul 2012)

  18 Jul 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.4.5.ebuild:
  Version BUmp

*lh-sources-3.4.4 (24 Jun 2012)

  24 Jun 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.4.4.ebuild:
  Version BUmp

*lh-sources-3.4.3 (19 Jun 2012)

  19 Jun 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.4.3.ebuild:
  Version Bump

*lh-sources-3.4.2-r1 (14 Jun 2012)

  14 Jun 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.4.2-r1.ebuild:
  Version BUmp

*lh-sources-3.4.2 (12 Jun 2012)

  12 Jun 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.4.2.ebuild:
  Version BUmp

*lh-sources-3.4.0 (22 May 2012)

  22 May 2012; Justin Lecher <jlec@gentoo.org> -lh-sources-3.3.0.ebuild,
  -lh-sources-3.3.2.ebuild, -lh-sources-3.3.3.ebuild, -lh-sources-3.3.4.ebuild,
  +lh-sources-3.4.0.ebuild:
  Drop old, bump version

*lh-sources-3.3.5 (12 May 2012)

  12 May 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.3.5.ebuild:
  Version BUmp

*lh-sources-3.3.4 (28 Apr 2012)

  28 Apr 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.3.4.ebuild:
  Version Bump

*lh-sources-3.3.3 (23 Apr 2012)

  23 Apr 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.3.3.ebuild:
  Version Bump

*lh-sources-3.3.2 (22 Apr 2012)

  22 Apr 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.3.2.ebuild:
  Version Bump

*lh-sources-3.3.0 (19 Mar 2012)

  19 Mar 2012; Justin Lecher <jlec@gentoo.org> -files/3.2.1-file-caching.patch,