@@ -29,6 +29,8 @@ DIST genpatches-3.4-6.base.tar.bz2 145231 SHA256 34b7e934f849ef10d706ea2d81878ac
 DIST genpatches-3.4-6.extras.tar.bz2 17508 SHA256 be8e087b3a0508e88bd36d2d4bec07e0756a3e7f7b31de4dbfd51d79412c2a96 SHA512 f84be04008f254509de7eb05c78fe040fa563038e8ba2744412296a54208c7889417f72ada0db8b21754e2db544fb921b75300728d48337bdc7a7dfa02cdcf26 WHIRLPOOL b0331d32d4ef74fd2357dfc2dc046562828f9bbbbd175412276d79d4097a11a6c91847ba364d8e84ffee361bfd868161951ae740ee232504d1ae4fbb9d87f74e
 DIST genpatches-3.5-1.base.tar.bz2 5239 SHA256 d7e2918d49ffd481369df3907ce49fffb5fb5ddcb78c3b18e0c778dfdf1cbc08 SHA512 0c210569d384fd82728fabfe2f73c7545aeac8039ac2adbf5d222aaee263316ff9cd8ea82e7e8068bf0f02af5e79cd11a072179f1a0bd4761b7a6a107a8282fe WHIRLPOOL 37730fa94d3b92e8aec5e68b12735ada1c2c7cfe648dcdd9293f6cd7a773ca4a16206f3ecdc2ec539819de263535dfeb4ae428035d7164bf840462aab168d06e
 DIST genpatches-3.5-1.extras.tar.bz2 17507 SHA256 1b2294687e842e6450184ce2800ba3df8006ca47d75f95437a1e1d2976162727 SHA512 2eefd45f853e9bab3f89701e470309471b5b2c9ed651dba03776a47d11e26c00170d32aaac547889ae7cee435278bb5ffa4ddc1dc769e6440d454008f62ce23d WHIRLPOOL 43dfd1c6a046e3dc07db72e8d7f062689366112ccf080a17b84bc7adda3e5257d7be551e0a34b6c79c9016b5b04bad5bdf8c52589dcc362dc675f72ca7681135
+DIST genpatches-3.5-2.base.tar.bz2 52007 SHA256 49293432afa6d7a58a47b93a2e3b5aa698c72c304a035f4afc9add44751819ff SHA512 02144148dea1fca3048a97cf751f7c32c079fbc2dfd0ddc16c778c1361f711f3b2b817b48c63c95563d2be701594594b638f1c05341c4927131d97dfbb0045ac WHIRLPOOL 8ac3a520db620a6fcd2a0907e0cc9281115ab9b1129e778c9c6297d9f0a9f43236cf9d9a028d97961c314c4403834301b02e2f0068ed6aafe00db3f5d82d2358
+DIST genpatches-3.5-2.extras.tar.bz2 17507 SHA256 1b2294687e842e6450184ce2800ba3df8006ca47d75f95437a1e1d2976162727 SHA512 2eefd45f853e9bab3f89701e470309471b5b2c9ed651dba03776a47d11e26c00170d32aaac547889ae7cee435278bb5ffa4ddc1dc769e6440d454008f62ce23d WHIRLPOOL 43dfd1c6a046e3dc07db72e8d7f062689366112ccf080a17b84bc7adda3e5257d7be551e0a34b6c79c9016b5b04bad5bdf8c52589dcc362dc675f72ca7681135
 DIST linux-3.0.tar.bz2 76753134 SHA256 64b0228b54ce39b0b2df086109a7b737cde58e3df4f779506ddcaccee90356a0 SHA512 4a87bba5f62945d226d8c0059d38e6354ad8cd379b8d7936f934a3868a69c6a4c724aad56d974966e8ef1de45f1e0bbe628cb15fc568b6f8cfc63dbc8104bc9d WHIRLPOOL 4bf0a38a623797be81eadaa4b102f9ea1da31edab9aa9e886577bfda79ffd6e105fff702438c2e1350cbb005f9e7594be8e07fe76ad36b1c28ef94184b6edf9f
 DIST linux-3.1.tar.bz2 77190238 SHA256 2573d2378c754b0c602b57586e9311e5b38c5d1e6c137f02873833633a4b9359 SHA512 131b814325d888bb11ba552bc5bdd91ee2d8e139b06ac7ba94e716bcbbcc99ba30867eeea4aab580907916203bc526ae0bccda688151b250ba7943e193e50252 WHIRLPOOL d224dd52c7133e9768817319d0ad0d3797d426180b4d3d936d5189b500521ac4abe4abae7cc71f055d7e5194171f549b6fdb0221ae023cb35b16993741ad1e61
 DIST linux-3.2.tar.bz2 78147838 SHA256 c881fc2b53cf0da7ca4538aa44623a7de043a41f76fd5d0f51a31f6ed699d463 SHA512 1f57b98e8da34b10f37ce94e0f13a994c111d483b104c27a8f58a4a55013a73a9f1ffcebb597be63ce0dfadb92201e93b0e072ba49bac0033026aceb0840c812 WHIRLPOOL 3dc893bde09f064e4614183964a4b9feaab938ca7a739f46f825818a577884eae815f195b52a4c55c571345de59d7ba09631fb68dac481a0837b24868ce60e3d
@@ -41,13 +43,14 @@ EBUILD lh-sources-3.2.11.ebuild 934 SHA256 a9a1f1f4547b900278289165014436fee7e06
 EBUILD lh-sources-3.3.5.ebuild 927 SHA256 0b3abcfd0de84f5a766fb94f4d6cda0c9f50e554b044f25468a4161a6e58d24f SHA512 1f22c1c5f5395b83701790b0cfb7aaa2c53a5f10284a8849870bd260a9f4abbfc6973682945d10cfdf33827ac658722a76d1909c0e11b73c75f87fe68a5e3bc0 WHIRLPOOL 22e6e23f480e51767d8876a828a21e9933b000850bc9e58d1ff54af0638cb63d6995f096e9518f554973fbfbfaf9d9667c2a93e9f9718a0e279cf394dbd868d9
 EBUILD lh-sources-3.4.5.ebuild 927 SHA256 0b3abcfd0de84f5a766fb94f4d6cda0c9f50e554b044f25468a4161a6e58d24f SHA512 1f22c1c5f5395b83701790b0cfb7aaa2c53a5f10284a8849870bd260a9f4abbfc6973682945d10cfdf33827ac658722a76d1909c0e11b73c75f87fe68a5e3bc0 WHIRLPOOL 22e6e23f480e51767d8876a828a21e9933b000850bc9e58d1ff54af0638cb63d6995f096e9518f554973fbfbfaf9d9667c2a93e9f9718a0e279cf394dbd868d9
 EBUILD lh-sources-3.5.0.ebuild 927 SHA256 d113e4e7ded2c3e886a1d965cf3f1067aac0ec84a0279b5cd3a703029b6fc577 SHA512 de7a52eaeae97540a78ce7dceeaf7caa40ebee7c89abd2bcd5d03bd87392b4ebeeac6c06e0dbda875b493c4d5af66d7001b6ac70585b620bf131726b4a0c2f4c WHIRLPOOL c0b9b4ce7d60b4c92991c51325a79b30d0808c1df1de76d51cca8ffc0b13601b03382bc40724f48e0c23745007d90528da45be753998d75674a4b2c38e212105
-MISC ChangeLog 11073 SHA256 e8ddb12e0097d22cd9b672f857c5bc978aeeeb8d28a31692c970f72c07719a39 SHA512 72ec4f538e1c36175d126d1831ec3ae7fc9f011d6f757e805212fef2f13ebc53f3f1f198bab8bb6c455c7d442c42f2a485685b17a1388df01e1c1d3a6760133d WHIRLPOOL 107a1a7cd10a344341ded121073934705d7398e22e089453883ddde15c13df664ad937b4aee4c9e1da635d371244b41a101215cb5a96c318a715cc39c878e2f1
+EBUILD lh-sources-3.5.1.ebuild 927 SHA256 5453b3a7b227e64c8cfcde1315a08af0a420287a665845a732004c60466c8211 SHA512 e54fb1a02d6e90aa8ff2a8e114e541c39636a8bed6db1bfa1edce517ec101dddee3ad436484528c8286a4884c9c40643fe71e4ef5f5f94ebf7a9a5f2046e13db WHIRLPOOL bb0422dca7b8455237faafb24c1d582bb280ca1e464642480f5e570c9afb00a3e605ee0ce6a990ae83f44221d581d1910ea47434a7e3d8c0212b6443408710c4
+MISC ChangeLog 11195 SHA256 50992700bfead9c39d678aa599d6135e97002a1496dbdefe25b690fb2043a438 SHA512 adc02936b366d53469382f158aa3736023ab1065f5c0a607f04600700e7a2a0fe9da6c09fbd321e83bdeb916eb4480d0694cd833bd528d1d4c923b8e2b982752 WHIRLPOOL 2f27cfa869e1db249d1191f8693ca22d9fc441aa0a55fa4f43ce89ee6ce18c7a313e236b6c67c661b0ceaa8647c865511cbb848c645db81ed0ab5b148e9d4c2e
 MISC metadata.xml 322 SHA256 576a908a4ed2228217d564ba7c2e1b3173ceacfc88258073d9b07698746870dc SHA512 001fce1594b001c9864d86024c45a1560b651e7dda5d81ad8190ea62c88ad48d79867a66cceb2e108e35d6c7d386799d5a3a9d705c8c3beb0c26cdb9b3b94007 WHIRLPOOL 8b233ac46194ab42d98d89be79df6b7f21843923bb9502336a8504a2e5c4de5f3d908de11baf2cf48adf04ab1b16b034707a3d4a1d8746c29bbc9574cd7248cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 Comment: GPGTools - http://gpgtools.org
 
-iEYEAREIAAYFAlAOOWcACgkQgAnW8HDreRajAACeI0GFflfRrK9U9UEzxWp3JwG8
-BtYAoIHzmAdiVEoK9G3oZ8SHu42nxjEj
-=Z9W/
+iEYEAREIAAYFAlAnV+0ACgkQgAnW8HDreRaUSACaA8+qgFgNZ3o9GViWGaxUHav3
+sSUAn1zU5FtqNO6AgGcXMhUtBnkSyO8c
+=a/Db
 -----END PGP SIGNATURE-----
