@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*lh-sources-3.5.1 (12 Aug 2012)
+
+  12 Aug 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.5.1.ebuild:
+  Version Bump
+
 *lh-sources-3.5.0 (24 Jul 2012)
 
   24 Jul 2012; Justin Lecher <jlec@gentoo.org> -lh-sources-3.4.0.ebuild,
